--- a/src/css/custom_portlet.scss
+++ b/src/css/custom_portlet.scss
@@ -2679,7 +2679,7 @@ text-decoration: none;
 
 .custom-admin-controls-open {
     .portlet > .portlet-topper {
-        z-index: 999;
+        //z-index: 999;
     }
 }
 
